<resources>
    <string name="app_name">Gandalf</string>
    <string name="openDrawer">Abrir Menu</string>
    <string name="closeDrawer">Fechar Menu</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="menu_header_first_title">Bem Vindo!</string>
    <string name="menu_header_second_title">Faça login para acessar suas informações.</string>
    <string name="actionbar_first_title">Busca</string>
    <string name="actionbar_second_title">Carrinho</string>
    <string name="menu_store">Ir para a Loja</string>
    <string name="menu_cart">Meu Carrinho</string>
    <string name="menu_account">Minha conta</string>
    <string name="menu_requests">Meus Pedidos</string>
    <string name="menu_search">Buscar Produtos</string>
    <string name="menu_login">Fazer Login</string>
    <string name="menu_qrcode">Leitor de QR Code</string>
    <string name="menu_contact">Contato</string>
    <string name="menu_about">Sobre Nós</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="activity_main_tab_title_one">Categorias</string>
    <string name="activity_main_tab_title_two">Loja</string>
    <string name="get_categories_task_progress_title">Tenha calma, cavaleiro...</string>
    <string name="get_categories_task_progress_message">Carregando Categorias...</string>
    <string name="get_products_task_progress_title">Aguarde</string>
    <string name="get_products_task_progress_message">Carregando Produtos...</string>
    <string name="activity_login_email">E-mail</string>
    <string name="activity_login_password">Senha</string>
    <string name="activity_login_enter">Entrar</string>
    <string name="activity_login_register">Criar conta</string>
    <string name="send_login_task_welcome">Olá</string>
    <string name="send_login_task_authentication">Email ou senha inválida!</string>
    <string name="send_login_task_title">Aguarde</string>
    <string name="send_login_task_message">Carregando dados...</string>
    <string name="register_activity_title">Olá jovem cavaleiro!</string>
    <string name="register_activity_sub_title">Deseja se juntar a nós? Primeiro, conte-nos um pouco sobre você.</string>
    <string name="register_activity_name">Digite seu nome completo aqui</string>
</resources>
