<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_first_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_store"
            android:icon="@drawable/icon_store"
            android:title="@string/menu_store" />

        <item
            android:id="@+id/menu_cart"
            android:icon="@drawable/icon_cart"
            android:title="@string/menu_cart" />

        <item
            android:id="@+id/menu_account"
            android:icon="@drawable/icon_requests"
            android:title="@string/menu_account" />

        <item
            android:id="@+id/menu_requests"
            android:icon="@drawable/icon_requests"
            android:title="@string/menu_requests" />
    </group>

    <group
        android:id="@+id/menu_second_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_search"
            android:icon="@drawable/icon_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/menu_login"
            android:icon="@drawable/icon_login"
            android:title="@string/menu_login" />

        <item
            android:id="@+id/menu_qrcode"
            android:icon="@drawable/icon_qrcode"
            android:title="@string/menu_qrcode" />

        <item
            android:id="@+id/menu_contact"
            android:icon="@drawable/icon_contact"
            android:title="@string/menu_contact" />

        <item
            android:id="@+id/menu_about"
            android:icon="@drawable/icon_about"
            android:title="@string/menu_about" />
    </group>
</menu>