<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/backgroundlogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="12dp"
    android:paddingRight="12dp"
    tools:context="com.gandalf.activitys.LoginActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:gravity="center"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/activity_login_email"
            android:inputType="textEmailAddress"
            style="@style/TextView"
            android:hint="@string/activity_login_email" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <EditText
                android:id="@+id/activity_login_password"
                android:inputType="textPassword"
                android:layout_width="0dp"
                android:layout_weight="0.9"
                style="@style/TextView"
                android:hint="@string/activity_login_password" />

            <ImageView
                android:id="@+id/activity_login_show_password"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginRight="12dp"
                android:layout_weight="0.1"
                android:src="@drawable/iconolho" />
        </LinearLayout>

        <Button
            android:id="@+id/activity_login_enter"
            style="@style/Buttons"
            android:text="@string/activity_login_enter" />

        <TextView
            android:id="@+id/activity_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            style="@style/ButtonsNullPrimario"
            android:text="@string/activity_login_register" />

</LinearLayout>